--- a/EddMont/Selectores/img/index.html
+++ b/EddMont/Selectores/img/index.html
@@ -21,7 +21,7 @@
             <h2>Selector de tipo etiqueta</h2>
             <p>Afecta a todas las etiquetas HTML de un mismo tipo.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Etiqueta_CSS.jpg" alt="CSS">
             <h3>RESULTAdo Html</h3>
             <img src="" alt="HTML">
         </SECtion>
@@ -30,7 +30,7 @@
             <h2>selector por id</h2>
             <p>Aplica estilos a un único elemento que tenga un id.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_ID_CSS.png" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="HTML">
         </section>
@@ -39,7 +39,7 @@
             <h2>selector por clase</h2>
             <p>Aplica estilos a varios elementos que tengan la misma clase.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Clase_CSS.png" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -48,7 +48,7 @@
             <h2>Selector por atributo </h2>
             <p>Selecciona elementos que tengan un atributo específico.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Atributo_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -57,7 +57,7 @@
             <h2>Selector de lista </h2>
             <p>Aplica el mismo estilo a varios selectores distintos.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Lista_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -67,7 +67,7 @@
             <h2>Selector de descendientes </h2>
             <p>Selecciona elementos que están dentro de otro elemento.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Descendientes_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -76,7 +76,7 @@
             <h2>Selector de hijos directos</h2>
             <p>Selecciona solo los hijos inmediatos de un elemento.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Hijos_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -85,7 +85,7 @@
             <h2>Selector hermano adyacente</h2>
             <p>Selecciona el elemento que viene justo después de otro.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Hermano_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
@@ -94,7 +94,7 @@
             <h2>Selector de hermano general</h2>
             <p>Selecciona todos los hermanos posteriores de un elemento.</p>
             <h3>Codigo css</h3>
-            <img src="" alt="CSS">
+            <img src="Selector_Hermano_General_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
             <img src="" alt="CSS">
         </section>
