--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -66,7 +66,7 @@
             <h2>Practica 5</h2>
             <p>Selectores</p>
             <ul>
-                <li><a href="" target="_blank">Link Pagina</a></li>
+                <li><a href="https://fdw52ad2025.github.io/website52/EddMont/Selectores/index.html" target="_blank">Link Pagina</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
             </ul>
         </article>
