selector por id

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -23,17 +23,17 @@
             <h3>Código CSS</h3>
             <img width="500px" src="img/cdtipo.png" alt="Código de selector de tipo">
             <p>Resultado</p>
-            <p>Redondeo de imagen 1 de concierto</p>     
-            <img width=250px" src="img/dtipo.png" alt="Resultado selector de tipo">           
+            <p>Redondeo de todas las imágenes y borde morado</p>     
+            <img width="350px" src="img/dtipo.png" alt="Resultado selector de tipo">           
         </section>
 
         <section>
             <header><h2 class="selector">Selector por ID</h2></header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img width="400" src="img/cid.png" alt="Código de selector por ID">
             <p>Resultado</p>
-            <p></p>     
-            <img src="" alt="">            
+            <p>Borde color verde a una imagen específica en página 2</p>     
+            <img width="650" src="img/id.png" alt="Resultado selector por ID">            
         </section>
 
         <section>
