--- a/FernandaGomezG/practica3/pagina2.html
+++ b/FernandaGomezG/practica3/pagina2.html
@@ -13,7 +13,7 @@
         </header>
             
             <p style="margin-left: 30px;" class="textostyle">Cocinar me gusta mucho</p>
-            <img src="img/spaguetti.jpg" alt="Spaguetti Verde" class="img">
+            <img src="img/spaguetti.jpg" alt="Spaguetti Verde" id="bordecocina">
             <p style="margin-left: 350px; margin-right: 700px; bottom: 240px;"  class="textostyle" >El platillo que más me gusta cocinar es spaguetti verde.
                 A veces, lo puedo complementar con milanesa empanizada y puré de papa y algunas verduras cocidas.
             </p>
