Selector por clase

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -39,10 +39,10 @@
         <section>
             <header><h2 class="selector">Selector por clase</h2></header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img width="550px" src="img/cclase.png" alt="Código de selector por clase">
             <p>Resultado</p>
-            <p></p>     
-            <img src="" alt="">            
+            <p>Clase sólo para los títulos de las páginas</p>     
+            <img width="550px" src="img/clase.png" alt="Resultado de selector por clase">            
         </section>
 
         <section>
