--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -50,8 +50,9 @@
                 <h2>Practica 5</h2>
                 <p>Aplicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
 
-                <button class="boton outline" onclick="window.open('Practica5/index.html', '_blank')">Link Commits</button>
-
+                <button class="boton outline" onclick="window.open('Practica5/index.html', '_blank')">Pagina Selectores</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/Practica5/index.html', '_blank')">Pagina Solicitiado</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-09-08&until=2025-09-10', '_blank')">Commits</button>
             </div>
         </div>
     </main>
