--- a/EddMont/Selectores/index.html
+++ b/EddMont/Selectores/index.html
@@ -16,7 +16,7 @@
             <h3>Código CSS</h3>
             <img src="Selector_Universal_CSS.jpg" alt="CSS">
             <h3>Resultado HTML</h3>
-            <img src="" alt="HTML">
+            <img src="Selector_Universal_HTML.jpg" alt="HTML">
         </section>
 
         <section>
