--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -48,10 +48,10 @@
         <section>
             <header><h2 class="selector">Selector de atributo</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/catributo.png" alt="Código de selector por atributo">
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Resaltado amarillo sólo para los enlaces a instagram</p>     
+            <img width="600px" src="img/atributo.png" alt="Resultado de selector por atributo">           
         </section>
 
         <section>
