Selector de listas

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -57,10 +57,12 @@
         <section>
             <header><h2 class="selector">Selector de lista</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/clistas.png" alt="Código de selector de listas">
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Sombreado en h1, y en asides</p>     
+            <img width="550px" src="img/listass.png" alt="Resultado de selector de listas en h1">
+            <p>Resultado 2</p>         
+            <img width="550px" src="img/listas.png" alt="Resultado de selectos de listas en aside">         
         </section>
 
         <section>
