Agregué selectores e imagenes

--- a/CarlosPortalesM/pasatiemposver2/pagina3.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina3.html
@@ -17,7 +17,7 @@
             honestamente me gusta variar mucho en mi gusto musical y estar abierto a escuchar muchos géneros distintos, también mucho depende de mi estado de ánimo, escuchar algo que me motive, algo que me ponga feliz o algo que me haga estar más triste, es algo muy importante por lo que la música
             siempre me acompaña en todos mis altos y bajos momentos.
         </p>
-        <audio controls src="img/cancion.mp3"></audio>
+        <audio class="cancion" controls src="img/cancion.mp3"></audio>
         <p>Un ejemplo de canción</p>
     </main>
     <aside></aside>
