--- a/CarlosPortalesM/pasatiemposver2/pagina5.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina5.html
@@ -9,9 +9,11 @@
 <body>
     <header><h1>Formulario sobre pasatiempos</h1></header>
     <main>
+        <h2>Encuesta</h2>
+        <p>A continuación una encuesta y los resultados actuales</p>
         <form action="">
-        <label for="deporte">De mis pasatiempos, ¿Cuál es el que más te interesó?</label>
-        <select name="deporte" id="deporte">
+        <label for="eleccion">De mis pasatiempos, ¿Cuál es el que más te interesó?</label>
+        <select name="eleccion" id="eleccion">
             <option value="">Coleccionar carros a escala</option>
             <option value="">Jugar Minecraft</option>
             <option value="">Escuchar música</option>
