Selector de descendientes

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -68,10 +68,10 @@
         <section>
             <header><h2 class="selector">Selector de descendientes</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/cdescendientes.png" alt="Código de selector de descendientes">
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Letra estilizada con la función italic</p>     
+            <img width="550px" src="img/descendientes.png" alt="Resultado de selector ded descentiendes">         
         </section>
 
         <section>
