--- a/CarlosPortalesM/practica4/index.html
+++ b/CarlosPortalesM/practica4/index.html
@@ -10,51 +10,60 @@
     <header><h1>Ejemplo de Selectores</h1></header>
     <main>
         <h2>Selector Universal</h2>
-        <p></p>
+        <p>Selecciona todos los elementos de la página</p>
         <img src="imagenes/selectoruniversal.png" alt="Código de selector universal">
         <img src="imagenes/universalejemplo.png" alt="Imagen ejemplo selector universal">
 
         <h2>Selector de tipo</h2>
+        <p>Selecciona todos los elementos de un tipo específico</p>
         <img src="imagenes/selectortipo.png" alt="Código de selector tipo">
         <img src="imagenes/tipoejemplo.png" alt="Imagen ejemplo selector tipo">
 
 
         <h2>Selector por ID</h2>
+        <p>Selecciona un único elemento que tenga un ID específico.</p>
         <img src="imagenes/selectorid.png" alt="Código de selector ID">
         <img src="imagenes/idejemplo.png" alt="Imagen ejemplo selector ID">
 
 
         <h2>Selector por clase</h2>
+        <p>Selecciona todos los elementos que tengan una clase específica</p>
         <img src="imagenes/selectorclase.png" alt="Código de selector clase">
         <img src="imagenes/claseejemplo.png" alt="Imagen ejemplo selector clase">
 
 
         <h2>Selector de atributo</h2>
+        <p>Selecciona todos los elementos que tengan un atributo específico</p>
         <img src="imagenes/selectoratributo.png" alt="Código de selector atributo">
         <img src="imagenes/atributoejemplo.png" alt="Imagen ejemplo selector atributo">
 
 
         <h2>Selector de lista</h2>
+        <p>Selecciona elementos de manera jerárquica o anidada</p>
         <img src="imagenes/selectorlista.png" alt="Código de selector lista">
         <img src="imagenes/listaejemplo.png" alt="Imagen ejemplo selector lista">
 
 
         <h2>Selector de descendientes</h2>
+        <p>Selecciona elementos que son descendientes de un elemento específico, cualquier elemento dentro de otro</p>
         <img src="imagenes/selectordescendiente.png" alt="Código de selector descendientes">
         <img src="imagenes/descendienteejemplo.png" alt="Imagen ejemplo selector descendientes">
 
 
         <h2>Selector hijos directos</h2>
+        <p>Selecciona solo los hijos directos de un elemento específico, elementos que están inmediatamente dentro de otro</p>
         <img src="imagenes/selectorhijodirecto.png" alt="Código de selector directos">
         <img src="imagenes/hijodirectoejemplo.png" alt="Imagen ejemplo selector hijos directos">
 
 
         <h2>Selector hermano adyacente</h2>
+        <p>Selecciona el hermano inmediato siguiente de un elemento, primer hermano inmediato</p>
         <img src="imagenes/selectorhermanoadyacente.png" alt="Código de selector hermano adyacente">
         <img src="imagenes/hermanoadyacenteejemplo.png" alt="Imagen ejemplo selector hermano adyacente">
 
 
         <h2>Selector hermano general</h2>
+        <p>Selecciona todos los hermanos de un elemento que están después de este</p>
         <img src="imagenes/selectorhermanogeneral.png" alt="Código de selector hermano general">
         <img src="imagenes/hermanogeneralejemplo.png" alt="Imagen ejemplo selector hermano general">
 
