--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -63,6 +63,18 @@
                     </li>
                 </ul>
             </section>
+
+                        </section>
+                        <section>
+                <h3>Practica 5</h3>
+                <p>Realizada el 10 de Septiembre del 2025.</p>
+                <p>Se diseñaron mediante css diferentes tipos de selectores con mis pasatiempos2.</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/c59a9667849d908d2a9c2074341358720f0e317d">Enlace commits</a>
+                    </li>
+                    <li><a href="">Enlace pagina de selectores</a></li>
+                </ul>
+            </section>
         </article>
     </main>
     <aside></aside>
