--- a/diegoalgosa/Pasatiempos2/GYM.html
+++ b/diegoalgosa/Pasatiempos2/GYM.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header><h1>GYM</h1></header>
+  <h2>Viva el dia de pecho</h2>
 
   <nav><a href="index.html">Volver al inicio</a></nav>
 
