--- a/diegoalgosa/Pasatiempos2/MUSICA.html
+++ b/diegoalgosa/Pasatiempos2/MUSICA.html
@@ -23,6 +23,10 @@
       </section>
     </article>
 
+    <section id="n01">
+      <p>Viva la musica</p>
+    </section>
+
     <aside>
       <h3>Encuesta</h3>
       <form action="#" method="post">
