--- a/diegoalgosa/Pasatiempos2/VIDEOJUEGOS.html
+++ b/diegoalgosa/Pasatiempos2/VIDEOJUEGOS.html
@@ -8,6 +8,8 @@
 <body>
   <header><h1>Videojuegos</h1></header>
 
+  <h2>wuuuu</h2>
+
   <nav><a href="index.html">Volver al inicio</a></nav>
 
   <main>
