--- a/diegoalgosa/Pasatiempos2/selectores.html
+++ b/diegoalgosa/Pasatiempos2/selectores.html
@@ -21,10 +21,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector universal">
+                <img width="350px" src="img2/evuniversal.jpeg" alt="Evidencia del selector universal">
 
                 <h4>Resultado:</h4>
-                <img width="800px" src="" alt="Resultado del selector universal">
+                <img width="800px" src="img2/reuniversal.jpeg" alt="Resultado del selector universal">
             </article>
         </section>
 
@@ -36,10 +36,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector de Tipo">
+                <img width="350px" src="img2/evtipo.jpeg" alt="Evidencia del selector de Tipo">
 
                 <h4>Resultado:</h4>
-                <img width="800px" src="" alt="Resultado del selector de Tipo">
+                <img width="800px" src="img2/retipo.jpeg" alt="Resultado del selector de Tipo">
             </article>
         </section>
 
@@ -51,10 +51,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector por ID">
+                <img width="350px" src="img2/evid.jpeg" alt="Evidencia del selector por ID">
 
                 <h4>Resultado:</h4>
-                <img width="800px" src="" alt="Resultado del selector por ID">
+                <img width="800px" src="img2/reid.jpeg" alt="Resultado del selector por ID">
             </article>
         </section>
 
@@ -66,10 +66,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector por Clase">
+                <img width="350px" src="img2/evclase.jpeg" alt="Evidencia del selector por Clase">
 
                 <h4>Resultado:</h4>
-                <img width="500px" src="" alt="Resultado del selector por Clase">
+                <img width="500px" src="img2/reclase.jpeg" alt="Resultado del selector por Clase">
             </article>
         </section>
 
@@ -81,10 +81,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector de atributo">
+                <img width="350px" src="img2/evatri.jpeg" alt="Evidencia del selector de atributo">
 
                 <h4>Resultado:</h4>
-                <img width="350px" src="" alt="Resultado del selector de atributo">
+                <img width="350px" src="img2/reatri.jpeg" alt="Resultado del selector de atributo">
             </article>
         </section>
 
@@ -96,10 +96,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector de Lista">
+                <img width="350px" src="img2/evlista.jpeg" alt="Evidencia del selector de Lista">
 
                 <h4>Resultado:</h4>
-                <img width="800px" src="" alt="Resultado del selector de Lista">
+                <img width="800px" src="img2/relista.jpeg" alt="Resultado del selector de Lista">
             </article>
         </section>
 
@@ -111,10 +111,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector de Descendientes">
+                <img width="350px" src="img2/evdesc.jpeg" alt="Evidencia del selector de Descendientes">
 
                 <h4>Resultado:</h4>
-                <img width="900px" src="" alt="Resultado del selector de Descendientes">
+                <img width="900px" src="img2/redesc.jpeg" alt="Resultado del selector de Descendientes">
             </article>
         </section>
 
@@ -126,10 +126,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector hijos directos">
+                <img width="350px" src="img2/evhijod.jpeg" alt="Evidencia del selector hijos directos">
 
                 <h4>Resultado:</h4>
-                <img width="350px" src="" alt="Resultado del selector de hijos directos">
+                <img width="350px" src="img2/rehijod.jpeg" alt="Resultado del selector de hijos directos">
             </article>
         </section>
 
@@ -141,10 +141,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector hermano adyacente">
+                <img width="350px" src="img2/evhead.jpeg" alt="Evidencia del selector hermano adyacente">
 
                 <h4>Resultado:</h4>
-                <img width="900px" src="" alt="Resultado del selector de hermano adyacente">
+                <img width="900px" src="img2/rehead.jpeg" alt="Resultado del selector de hermano adyacente">
             </article>
         </section>
 
@@ -156,10 +156,10 @@
                 </header>
 
                 <h4>Css:</h4>
-                <img width="350px" src="" alt="Evidencia del selector hermano general">
+                <img width="350px" src="img2/evhegn.jpeg" alt="Evidencia del selector hermano general">
 
                 <h4>Resultado:</h4>
-                <img width="800px" src="" alt="Resultado del selector de hermano general">
+                <img width="800px" src="img2/rehegn.jpeg" alt="Resultado del selector de hermano general">
             </article>
         </section>
 
