--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -77,28 +77,28 @@
         <section>
             <header><h2 class="selector">Selector Hijos directos</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img width="500px" src="img/chdirectos.png" alt="Código hijos directos">
             <p>Resultado</p>
-            <p></p>     
-            <li><img src="" alt=""></li>            
+            <p>Los p dentro de los section y article llevan letra roja</p>     
+            <img width="550px" src="img/hdirectos.png" alt="Resultado selector hijos directos">            
         </section>
 
         <section>
             <header><h2 class="selector">Selector Hermano adyacente</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img src="" alt="">
             <p>Resultado</p>
             <p></p>     
-            <li><img src="" alt=""></li>            
+            <img src="" alt="">            
         </section>
 
         <section>
             <header><h2 class="selector">Selector Hermano general</h2></header>
             <h3>Código CSS</h3>
-            <li><img src="" alt=""></li>
+            <img src="" alt="">
             <p>Resultado</p>
             <p></p>     
-            <li><img src="" alt=""></li>            
+            <img src="" alt="">            
         </section>
     </main>
 </body>
