Commit casi final practica 5

--- a/AlejandroRmzEsc/index.html
+++ b/AlejandroRmzEsc/index.html
@@ -38,6 +38,20 @@
                 <a href="pasatiemposv2/index.html">Pagina Pasatiempos</a>
             </div>
         </div>
+                <div class="evidencia">
+            <h2>Practica 4</h2>
+            <p>Aplicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
+            <div class="opcion">
+                <a href="https://github.com/FDW52AD2025/website52/commits?since=2025-09-01&until=2025-09-03&author=AlejandroRmzEsc" target="_blank">Commits</a>
+            </div>
+        </div>
+                <div class="evidencia">
+            <h2>Practica 5</h2>
+            <p>Utilizando sus archivos HTML sobre sus pasatiempos versión 2. Crear un sitio donde se muestre por lo menos un ejemplo de cada selector CSS.</p>
+            <div class="opcion">
+                <a href="selectores/index.html" target="_blank">Pagina</a>
+                <a href="" target="_blank">Commits</a>
+            </div>
         </div>
     </div>
 </body>
