--- a/AlejandroRmzEsc/pasatiemposv2/hobbie4.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie4.html
@@ -47,7 +47,7 @@
              <input type="number" id="horas" name="horas" min="1"   max="168"><br><br>
            </div>
 
-           <button type="submit">Enviar</button>
+           <button type="submit" class="boton">Enviar</button>
         </form>
     </main>
 
