--- a/caroocaast/selectores/index.html
+++ b/caroocaast/selectores/index.html
@@ -49,7 +49,31 @@
         <img width="350" src="imgs/Captura de pantalla 2025-09-09 222624.png" alt="Captura de pantalla">
     </section>
 
-    
+    <section>
+        <header> <h2>Selector de lista</h2></header>
+        <h3> Codigo CSS</h3>
+        <img width="300" src="imgs/Captura de pantalla 2025-09-10 225717.png" alt="Captura de pantalla">
+        <h3> Resultado en HTML</h3>
+        <img width="350" src="imgs/Captura de pantalla 2025-09-10 225658.png" alt="Captura de pantalla">
+    </section>
+
+    <section>
+        <header> <h2>Selector de descendientes</h2></header>
+        <h3> Codigo CSS</h3>
+        <img width="300" src="imgs/Captura de pantalla 2025-09-10 231811.png" alt="Captura de pantalla">
+        <h3> Resultado en HTML</h3>
+        <img width="350" src="imgs/Captura de pantalla 2025-09-10 234818.png" alt="Captura de pantalla">
+    </section>
+
+    <section>
+        <header> <h2>Selector hijos directos</h2></header>
+        <h3> Codigo CSS</h3>
+        <img width="300" src="imgs/Captura de pantalla 2025-09-10 234622.png" alt="Captura de pantalla">
+        <h3> Resultado en HTML</h3>
+        <img width="400" src="imgs/Captura de pantalla 2025-09-10 234638.png" alt="Captura de pantalla">
+    </section>
+
+ 
 <footer>
         <h4>
             Escrito por C.C.S, 2025.
