selector hermanos adyacentes

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -86,10 +86,10 @@
         <section>
             <header><h2 class="selector">Selector Hermano adyacente</h2></header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img width="500px" src="img/had.png" alt="Código hermanos adyacente">
             <p>Resultado</p>
-            <p></p>     
-            <img src="" alt="">            
+            <p>Fondo rosa</p>     
+            <img width="500px" src="img/Captura de pantalla 2025-09-10 235605.png" alt="Resultado selector hermano adyacente">            
         </section>
 
         <section>
