Se agregó Practica 2

--- a/GiselleValerio1/index.html
+++ b/GiselleValerio1/index.html
@@ -9,11 +9,20 @@
 <body>
     <h1>Links de Practicas</h1>
     <section id="s1">
-    <ul>
-        <li><a href=" https://github.com/GiselleValerio1/GNVA">Link Repositorio</a></li>
-        <li><a href="https://gisellevalerio1.github.io/GNVA/">Link Sitio Publicado</a></li>
-        <li><a href="https://github.com/GiselleValerio1/GNVA/commits/main/?since=2025-09-10&until=2025-09-10">Link Commits</a></li>
-    </ul>
+        <h2>Practica 1</h2>
+        <ul>
+            <li><a href=" https://github.com/GiselleValerio1/GNVA">Link Repositorio</a></li>
+            <li><a href="https://gisellevalerio1.github.io/GNVA/">Link Sitio Publicado</a></li>
+            <li><a href="https://github.com/GiselleValerio1/GNVA/commits/main/?since=2025-09-10&until=2025-09-10">Link Commits</a></li>
+        </ul>
+    </section>
+
+    <section id="s2">
+        <h2>Practica 2</h2>
+        <ul>
+            <li><a href=" https://github.com/GiselleValerio1/GNVA">Link Pagina Personal</a></li>
+            <li><a href="https://gisellevalerio1.github.io/GNVA/">Link Commits</a></li>
+        </ul>
     </section>
 
 </body>
