Selector hermanos generales

--- a/FernandaGomezG/selectores/index.html
+++ b/FernandaGomezG/selectores/index.html
@@ -95,10 +95,10 @@
         <section>
             <header><h2 class="selector">Selector Hermano general</h2></header>
             <h3>Código CSS</h3>
-            <img src="" alt="">
+            <img width="500px" src="img/chgenerales.png" alt="Código por hermanos generales">
             <p>Resultado</p>
-            <p></p>     
-            <img src="" alt="">            
+            <p>Borde y relleno de cuadro de texto de color</p>     
+            <img width="500px" src="img/hgenerales.png" alt="Resultado selector de hermanos generales">            
         </section>
     </main>
 </body>
