Cambio en html principal de evidencias

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -128,6 +128,25 @@
                 <h4>Fecha commits</h4>
                 <p>08 al 10 de septiembre del 2025</p>
 
+                <section>
+            <article>
+                <header>
+                    <h3>Practica 6</h3>
+                    <hr>
+                </header>
+
+                <p>Practica 6 de EV1 - En esta practica se pidio que diseñaramos una página que sea lo más parecido posible a 5 cuadros de una página web que el profesor nos indico. 
+                </p>
+                
+                <p>Enlaces pedidos:</p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/practica6.html">Link Página selectores</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-09-10&until=2025-09-11">Link de commits</a></li>
+                </ul>
+
+                <h4>Fecha commits</h4>
+                <p>10 al 12 de septiembre del 2025</p>
+
             </article>
         </section>
 
