commit final de html principal de evidencias

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -140,7 +140,7 @@
                 
                 <p>Enlaces pedidos:</p>
                 <ul>
-                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/practica6.html">Link Página selectores</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 6/practica6.html">Link Página diseño solicitado</li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-09-10&until=2025-09-11">Link de commits</a></li>
                 </ul>
 
