Primera parte ajustando el diseño de la página de las evs

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Mis Evidencias 😁👍</title>
 </head>
-<body class="bodyprincipal1">
-    <header>
+<body class="fondo">
+    <header class="titulo-principal">
         <h1>Fundamentos del Desarrollo Web: Evidencias de aprendizaje</h1>
     </header>
-    <main>
-        <article>
-            <section>
+    <main >
+        <article class="cuerpo">
+            <section id="no-evidencia">
                 <header>
-                    <hr>
-                    <h2>Evidencia 1</h2>
-                    <hr>  
+                    <h2>Evidencia 1</h2> 
                 </header>
+            </section>
+            <section>
                 <header>
                     <h2>Practica 1</h2>
                 </header>
@@ -96,13 +96,27 @@
                         <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/selectores_css/index.html">LINK A LA PAGINA DE LOS SELECTORES EN CSS DE LA V2 DE "MIS PASATIEMPOS"</a></li>
                         <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-08&until=2025-09-10&author=Hugo-0699">LINK DE LOS COMMITS</a></li>
                     </ul>
-                    <hr>
+                </nav>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Practica 6</h2>
+                </header>
+                <p>En esta práctica, kokoko</p>
+                <p>Fecha de los commits: 10 al 12 de Septiembre.</p>
+                <nav>
+                    <h4>Enlaces de GitHub:</h4>
+                    <ul>
+                        <li><a target="_blank" href="">LINK A LA PAGINA (no esta listo)"</a></li>
+                        <li><a target="_blank" href="">LINK DE LOS COMMITS (no esta listo)</a></li>
+                    </ul>
                 </nav>
             </section>
         </article>
     </main>
     <aside></aside>
-    <footer class="Hecho-por">
+    <footer class="datos-personales">
         <address>
             <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
             <p>Matricula: 2088379</p>
