--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -72,7 +72,17 @@
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commit/2f562a51b410cd022928d0d7af83659642757168">Enlace commits</a>
                     </li>
-                    <li><a href="">Enlace pagina de selectores</a></li>
+                    <li><a href="http://127.0.0.1:5501/diegoalgosa/Pasatiempos2/selectores.html">Enlace pagina de selectores</a></li>
+                </ul>
+            </section>
+
+                                    <section>
+                <h3>Practica 6</h3>
+                <p>Realizada el 03 de Septiembre del 2025.</p>
+                <p>Se agrego estilo personalizado a mi link de la pagina principal.</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/c59a9667849d908d2a9c2074341358720f0e317d">Enlace commits</a>
+                    </li>
                 </ul>
             </section>
         </article>
