--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -78,10 +78,11 @@
 
                                     <section>
                 <h3>Practica 6</h3>
-                <p>Realizada el 03 de Septiembre del 2025.</p>
-                <p>Se agrego estilo personalizado a mi link de la pagina principal.</p>
+                <p>Realizada el 11 de Septiembre del 2025.</p>
+                <p>Se creo la imagen solicitada por el maestro utilziando flexbox en un documento html.</p>
                 <ul>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commit/c59a9667849d908d2a9c2074341358720f0e317d">Enlace commits</a>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/a5ec04ef8c394f90bca2fc61da5fbbe07d043e29">Enlace commits</a>
+                    <li><a href="">Enlace pagina de selectores</a></li>
                     </li>
                 </ul>
             </section>
