--- a/diegoalgosa/index.html
+++ b/diegoalgosa/index.html
@@ -82,7 +82,7 @@
                 <p>Se creo la imagen solicitada por el maestro utilziando flexbox en un documento html.</p>
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commit/a5ec04ef8c394f90bca2fc61da5fbbe07d043e29">Enlace commits</a>
-                    <li><a href="">Enlace pagina de selectores</a></li>
+                    <li><a href="http://127.0.0.1:5501/diegoalgosa/practica6/index.html">Enlace pagina de selectores</a></li>
                     </li>
                 </ul>
             </section>
