--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -125,7 +125,7 @@
 
             <p>Enlaces requeridos: </p>
             <ul>
-                <li>Link página diseño solicitado: <a href=""></a></li>
+                <li>Link página diseño solicitado: <a href="https://fdw52ad2025.github.io/website52/jesuscruz125/practica6/index.html">https://fdw52ad2025.github.io/website52/jesuscruz125/practica6/index.html</a></li>
                 <li>Link commits: <a href=" https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-10&until=2025-09-12"> https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10</a></li>
             </ul>
 
