--- a/jesuscruz125/practica6/index.html
+++ b/jesuscruz125/practica6/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Práctica 6</h1>
-        <p class="back"><a href="/jesuscruz125/index.html">← Volver al índice principal</a></p>
+        <p class="back"><a href="jesuscruz125/index.html">← Volver al índice principal</a></p>
     </header>
 
     <main>
