Diseño básico index

--- a/jesuscruz125/practica6/index.html
+++ b/jesuscruz125/practica6/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clon de una sección de la página codepen.io">
+    <meta name="author" content="Jesús Cruz">
     <link rel="stylesheet" href="p6estilos.css">
-    <title>Document</title>
+    <title>Práctica 6 Clon</title>
 </head>
 <body>
 
     <header>
         <h1>Práctica 6</h1>
-        <p class="back"><a href="jesuscruz125/index.html">← Volver al índice principal</a></p>
+        <p class="back"><a href="https://fdw52ad2025.github.io/website52/jesuscruz125/index.html">← Volver al índice principal</a></p>
     </header>
 
     <main>
