modificacion index practica6

--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -86,6 +86,19 @@
                 <p><b>Fecha de Commits: 8 al 10 de Septiembre</b></p>
             </article>
         </section>
+        <hr>
+
+        <section>
+            <h2>Sexta Practica</h2>
+            <article>
+                <p>Utilizando el elemento flexbox, agregue un documento HTML donde diseñamos una imagen de referencia de la pagina <i>Codepen</i>.</p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Bejesusrey/FlexBoxCss/index.html">Link Página Diseño Solicitado</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-09-11&until=2025-09-11&author=Bejesusrey">Link Commits</a></li>
+                </ul>
+                <p><b>Fecha de Commits: 10 al 12 de Septiembre</b></p>
+            </article>
+        </section>
 
     </main>
     
