--- a/ernesgarcia06/practica6/index.html
+++ b/ernesgarcia06/practica6/index.html
@@ -14,19 +14,19 @@
     <section id="s01">
         <div>
             <img width="110px" height="110px" src="img/REACT.png" alt="REACT">
-            <p>REACT</p>
+            <p>React</p>
         </div>
         <div>
             <img width="110px" height="110px" src="img/VUE_logo.png" alt="VUE">
-            <p>VUE</p>
-        </div>
-        <div>
-            <img width="110px" height="110px" src="img/sass.svg" alt="SASS">
-            <p>SASS</p>
+            <p>Vue</p>
         </div>
         <div>
             <img width="110px" height="110px" src="img/tailwind.svg" alt="TAIWIND">
-            <p>TAILWIND</p>
+            <p>Tailwind</p>
+        </div>
+        <div>
+            <img width="110px" height="110px" src="img/sass.svg" alt="SASS">
+            <p>Sass</p>
         </div>
         <div>
             <img width="100px" src="img/gsap.png" alt="GSAP">
