Links de practica6

--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -75,8 +75,8 @@
                     <h2>PRÁCTICA 6</h2>
                     <p>Práctica de creación de diseño utilizando flexbox e imágenes en CSS dentro de una nueva página. Práctica realizada del 10 al 12 de septiembre. </p>
                     <ul>
-                        <li><a href=""> Link Página de diseño solicitado</a></li> 
-                        <li><a href="">Link de los commits</a></li>
+                        <li><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/practica6/index.html"> Link Página de diseño solicitado</a></li> 
+                        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=victoriabalderas&since=2025-09-10&until=2025-09-11">Link de los commits</a></li>
                     </ul>
                 </section>
             </div>
