--- a/FernandaGomezG/practica6/index.html
+++ b/FernandaGomezG/practica6/index.html
@@ -7,6 +7,10 @@
 </head>
 <h1>Práctica 6</h1>
 <body>
-    
+    <img src="img/react.png" alt="">
+    <img src="img/vue.png" alt="">
+    <img src="img/tailwind.png" alt="">
+    <img src="img/sass.png" alt="">
+    <img src="img/gsap.png" alt="">
 </body>
 </html>
