--- a/SunnyWiltshire/index.html
+++ b/SunnyWiltshire/index.html
@@ -71,6 +71,18 @@
             <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P5/index.html">Página selectores.</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-09-08&until=2025-09-10">Link de los commits.</a></li>
         </ul>
+
+        <hr>
+
+        <h2>Práctica 6</h2>
+        <p>Copia de los contenedores de la pagina codepen.io</p>
+        <p>Realicé n commits, del 10 al 12 de Septiembre.</p>
+        <h3>Enlaces de la práctica 6:</h3>
+        <ul>
+            <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P6/index.html">Link de la página clon.</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-09-10&until=2025-09-12">Link de los commits.</a></li>
+        </ul>
+        
     </main>
     <aside></aside>
     <footer>
