clase posiciones css

--- a/FernandaGomezG/practica6/index.html
+++ b/FernandaGomezG/practica6/index.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Práctica 6</title>
 </head>
-<h1>Práctica 6</h1>
-<body>
-    <img src="img/react.png" alt="">
-    <img src="img/vue.png" alt="">
-    <img src="img/tailwind.png" alt="">
-    <img src="img/sass.png" alt="">
-    <img src="img/gsap.png" alt="">
+<header><h1>Práctica 6</h1></header>
+<body class="fondo">
+    <div class="posiciones">
+        <div>
+            <img src="img/react.png" alt="">
+        </div>
+
+        <div>
+            <img src="img/vue.png" alt="">
+        </div>
+
+        <div>
+            <img src="img/tailwind.png" alt="">
+        </div>
+
+        <div>
+            <img src="img/sass.png" alt="">
+        </div>
+
+        <div>
+            <img src="img/gsap.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
