--- a/aaronrdzr/practica6/index.html
+++ b/aaronrdzr/practica6/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <h1>Practica 6</h1>
+    <hr>
+    <h2>FlexBox</h2>
+    <hr class="hr2">
     <section>
         <div><img src="img/react.png" alt="Logo REACT"></div>
         <div><img src="img/vue.png" alt="Logo VUE"></div>
