--- a/aaronrdzr/practica6/index.html
+++ b/aaronrdzr/practica6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FlexBox</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -11,12 +11,12 @@
     <hr>
     <h2>FlexBox</h2>
     <hr class="hr2">
-    <section>
-        <div><img src="img/react.png" alt="Logo REACT"></div>
-        <div><img src="img/vue.png" alt="Logo VUE"></div>
-        <div><img src="img/taiwan.png" alt="Logo TAILWIND"></div>
-        <div><img src="img/sass.png" alt="Logo SASS"></div>
-        <div><img src="img/gsap.png" alt="Logo GSAP"></div>
+    <section class="s1">
+        <div class="cajas"><img src="img/react2.png" alt="Logo REACT"></div>
+        <div class="cajas"><img src="img/vue2.png" alt="Logo VUE"></div>
+        <div class="cajas"><img src="img/tailwind.png" alt="Logo TAILWIND"></div>
+        <div class="cajas"><img src="img/sass2.png" alt="Logo SASS"></div>
+        <div class="cajas"><img src="img/gsap2.png" alt="Logo GSAP"></div>
     </section>
 </body>
 </html>
