--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prácticas</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -25,8 +26,8 @@
         <h2>Práctica 2</h2>
         <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
         <ul>
-            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/Bere-ops/index.html">Página Principal: </a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops/index.html?since=2025-08-20&until=2025-08-22">Commits: </a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/Bere-ops/index.html">Página Principal </a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops/index.html?since=2025-08-20&until=2025-08-22">Commits </a></li>
         </ul>
         <h2>Fecha de los commits</h2>
         <p>20 al 22 de Agosto</p>
@@ -36,9 +37,9 @@
         <h2>Práctica 3</h2>
         <p>Se modificó la Evidencia 1. Se agregó una subcarpeta y se incorporaron 5 archivos HTML con su respectiva estructura.</p>
         <ul>
-            <li><a href="https://FDW52AD2025.github.io/website52/Bere-ops/Pasatiempos_Ver2/index.html">Página pasatiempo versión 2: </a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops?author=Bere-ops&since=2025-08-27&until=2025-08-27">Commits trabajo en clase 27 de agosto: </a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops?author=Bere-ops&since=2025-08-27&until=2025-08-29">Commits: </a></li>
+            <li><a href="https://FDW52AD2025.github.io/website52/Bere-ops/Pasatiempos_Ver2/index.html">Página pasatiempo versión 2 </a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops?author=Bere-ops&since=2025-08-27&until=2025-08-27">Commits trabajo en clase 27 de agosto </a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops?author=Bere-ops&since=2025-08-27&until=2025-08-29">Commits </a></li>
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 27 al 29 de Agosto</p>
@@ -49,7 +50,7 @@
         <p>Apliqué un estilo personalizado a mi link de la página principal de la organización. Los estilos que utilicé los guardé dentro de mi carpeta en la organización.</p>
         <p>Link</p>
         <ul>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-01&until=2025-09-03&author=Bere-ops">Commits:</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-01&until=2025-09-03&author=Bere-ops">Commits</a></li>
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 1 al 3 de Septiembre.</p>
@@ -64,6 +65,18 @@
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 1 al 3 de Septiembre.</p>
+
+        <hr>
+
+        <h2>Práctica 6</h2>
+        <p>Utilizamos flexbox para crear un documento HTML donde diseñamos lo que se muestra en la imagen siguiente:</p>
+        <img src="img.png" alt="imagen de muestra de la práctica que debíamos de realizar">
+       <ul>
+            <li><a href="https://fdw52ad2025.github.io/website52/Bere-ops/Practica6/index.html">Link Página Diseño solicitado</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-10&until=2025-09-11&author=Bere-ops">Link Commits</a></li>
+        </ul>
+        <h2>Fecha de los commits: </h2>
+        <p> 10 al 12 de Septiembre.</p>
     </main>
     <aside></aside>
     <hr>
