--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -73,7 +73,7 @@
         <img src="img.png" alt="imagen de muestra de la práctica que debíamos de realizar">
        <ul>
             <li><a href="https://fdw52ad2025.github.io/website52/Bere-ops/Practica6/index.html">Link Página Diseño solicitado</a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-10&until=2025-09-11&author=Bere-ops">Link Commits</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Bere-ops&since=2025-09-10&until=2025-09-12">Link Commits</a></li>
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 10 al 12 de Septiembre.</p>
