--- a/FernandaGomezG/practica6/index.html
+++ b/FernandaGomezG/practica6/index.html
@@ -7,9 +7,9 @@
     <title>Práctica 6</title>
 </head>
 
-<body class="fondo">
+<body class="fondo" >
     <header><h1>Práctica 6</h1></header>
-        <section id="posicion">
+        <section id="posicion" >
             <div>
                 <img src="img/react.png" alt="Imagen React">
                 <p>React</p>
@@ -20,9 +20,9 @@
                 <p>Vue</p>
             </div>
             
-            <div>
+            <div class="excp">
                 <img src="img/tailwind.png" alt="Imagen Tailwind">
-                <p>TAILWIND</p>
+                <p>Tailwind</p>
             </div>
             
             <div>
