--- a/FernandaGomezG/practica6/index.html
+++ b/FernandaGomezG/practica6/index.html
@@ -36,4 +36,5 @@
             </div>
         </section>
 </body>
+<footer><p>&copy;Desarrollado Por Fernanda Nohemí Gómez García</p></footer>
 </html>
