--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -100,6 +100,27 @@
                 </footer>
             </section>
 
+            <h2>Práctica 5</h2>
+
+            <section>
+                <header>
+                    <h3>Se presenta el link que corresponde a los commits práctica 5.</h3>
+                </header>
+
+                <!-- desarrollo -->
+
+                <li>
+                    <a href="p5/index.html">Página de los selectores</a>
+                </li>
+                
+                <li>
+                    <a href="https://github.com/FDW52AD2025/website52/commits/main/ErickLTI?since=2025-09-08&until=2025-09-10">Commits del día 09/08/25 - 09/10/25</a>
+                </li>
+                <footer>
+                    <p>Práctica realizada entre 08 y 14 de Septiembre del año 2025</p>
+                </footer>
+            </section>
+
 
 
         </article>
