Se añadieron links practica 6

--- a/FerminEstrada52/index.html
+++ b/FerminEstrada52/index.html
@@ -60,7 +60,7 @@
         <h3>Descripción</h3>
             <p>Página sobre caso de uso de Flexbox.</p>
         <h3>Links</h3>
-            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/FerminEstrada52/Practica%205/index.html">Sitio</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/FerminEstrada52/Pr%C3%A1ctica%206/index.html">Sitio</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FerminEstrada52&since=2025-09-10&until=2025-09-12">Commits</a></li>
         <h3>Fecha de commits</h3>
             <p>Del 8 al 10 de septiembre</p>
