--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -61,8 +61,8 @@
         <p>Estos son los links de la práctica realizada del 10 al 12 de septiembre</p>
         <nav>
             <ol>
-                <li><a href="" target="_blank">Página con estilos en CSS usando Flexbox</a></li>
-                <li><a href="" target="_blank">Commits realizados del 10 al 12 de septiembre</a></li>                    
+                <li><a href="practica6/index.html" target="_blank">Página con estilos en CSS usando Flexbox</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-10&until=2025-09-12" target="_blank">Commits realizados del 10 al 12 de septiembre</a></li>                    
                 </ol>
             </nav>
     </main>
