Modificación de la practica 6, aplicación de estilos CSS

--- a/Hugo-0699/practica-6/index.html
+++ b/Hugo-0699/practica-6/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>PRACTICA 6</title>
 </head>
-<body>
-    
+<body class="c-background">
+    <main>
+        <article>
+            <header class="first-header">
+                <h1>Ejemplo de una pagina web</h1>
+            </header>
+            <section class="config-img">
+                <img src="imgs/img1.png" alt="">
+                <img src="imgs/img2.png" alt="">
+                <img src="imgs/img3.png" alt="">
+                <img src="imgs/img4.png" alt="">
+                <img src="imgs/img5.png" alt="">
+            </section>
+        </article>
+    </main>
+    <aside class="aside"> <p>hola o</p></aside>
+    <footer class="datos-personales">
+        <address>
+            <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
+        </address>
+    </footer>
 </body>
 </html>
