--- a/GiselleValerio1/index.html
+++ b/GiselleValerio1/index.html
@@ -20,8 +20,8 @@
     <section id="s2">
         <h2>Practica 2</h2>
         <ul>
-            <li><a href=" https://github.com/GiselleValerio1/GNVA">Link Pagina Personal</a></li>
-            <li><a href="https://gisellevalerio1.github.io/GNVA/">Link Commits</a></li>
+            <li><a href="https://fdw52ad2025.github.io/website52/GiselleValerio1/index.html">Link Pagina Personal</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=GiselleValerio1&since=2025-09-10&until=2025-09-10">Link Commits</a></li>
         </ul>
     </section>
 
