guardado de selectores

--- a/luca384/index.html
+++ b/luca384/index.html
@@ -33,9 +33,15 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/">Todos los Commits</a></li>
         </ul>
 
+        <h2>Practica 4:Modificacion del link de la pagina principal con css </h2>
+        <p>En esta practica modificamos el link de nuestra pagina personal con css</p>
+        <ul class="links">
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384&since=2025-09-03&until=2025-09-03">Commit del cambio del link</a></li>
+        </ul>
+
     </header>
 
-    <footer>© 2025 Practica 3 - Todos los derechos reservados Política de privacidad</footer>
+    <footer>© 2025 Pagina de Practicas - Todos los derechos reservados Política de privacidad</footer>
 </body>
 </html>
 
