insertamos react en index

--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -4,38 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Práctica 6 - Fernando Nicolas Molina Ramirez</title>
 </head>
 <body>
     <section id="contendor-boards">
         <div  class="contenedores">
         <a href="">
             <div class="contenedor">
-                <img src="img/react.png" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1150px-React-icon.svg.png" alt="logo react">
                 <h3>React</h3>
             </div>
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="img/vue.png" alt="">
+                <img src="" alt="">
                 <h3>Vue</h3>
             </div>
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="img/Tailwind.png" alt="">
+                <img src="" alt="">
                 <h3>Tailwind</h3>
             </div>
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="img/Sass.png" alt="">
+                <img src="" alt="">
                 <h3>Sass</h3>
             </div>
         </a>
                 <a href="">
             <div class="contenedor">
-                <img src="img/Gsap.png" alt="">
+                <img src="" alt="">
                 <h3>GSAP</h3>
             </div>
         </a>
