insertamos vue en index y ponemos un footer

--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -17,7 +17,7 @@
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/2367px-Vue.js_Logo_2.svg.png" alt="vue logo png">
                 <h3>Vue</h3>
             </div>
         </a>
@@ -41,5 +41,9 @@
         </a>
         </div>
     </section>
+
+    <footer class="main-footer">
+        <p>© 2025 - Fernando Nicolás Molina Ramírez</p>
+    </footer>
 </body>
 </html>
