insertamos tailwind en index

--- a/F-rn-ndo/practica6/index.html
+++ b/F-rn-ndo/practica6/index.html
@@ -23,7 +23,7 @@
         </a>
         <a href="">
             <div class="contenedor">
-                <img src="" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/2560px-Tailwind_CSS_Logo.svg.png" alt="logo tailwind png">
                 <h3>Tailwind</h3>
             </div>
         </a>
